--- a/static/app/contactManager/profileQuestionnaireLinesMaintenance.html
+++ b/static/app/contactManager/profileQuestionnaireLinesMaintenance.html
@@ -57,7 +57,9 @@
                             ng-class="{'bold': profileQuestionnaireLine.Type == Constants.ProfileQuestionaireLineTypes[0].Code}"
                             ng-init="profileQuestionnaireLine.LineNo = $index + 1">
                             <div class="data-row row sortable-handle editable-row">
-                                <div class="row-index col col-xs-1">{{$index + 1}}</div>
+                                <div class="row-index col col-xs-1">
+                                    {{$index + 1}}
+                                 </div>
                                 <div class="col grid-static-col col-xs-1">
                                     <div class="form-group">
                                         <select class="form-control" name="Type[]" id="Type_{{$index + 1}}" ng-model="profileQuestionnaireLine.Type" ng-options="s.Code as s.Name for s in Constants.ProfileQuestionaireLineTypes"
@@ -107,12 +109,20 @@
                                 </div>
                                 <div class="col grid-static-col col-xs-1">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" name="NoContacts[]" id="NoContacts_{{$index + 1}}" ng-model="profileQuestionnaireLine.NoContacts"
+                                        <input type="number" class="form-control" name="NoContacts[]" id="NoContacts_{{$index + 1}}" ng-model="profileQuestionnaireLine.NoContacts"
                                             disabled/>
                                     </div>
                                 </div>
                                 <div class="col col-xs-1">
-                                    <a class="close btn-open-row" ng-click="lineDetail(profileQuestionnaireLine)" ng-show="profileQuestionnaireLine.Type == Constants.ProfileQuestionaireLineTypes[0].Code"><span class="fa fa-ellipsis-h"></span></a>
+                                    <span uib-dropdown>
+                                        <a class="close btn-open-row" id="line-dropdown_{{$index}}" uib-dropdown-toggle><span class="fa fa-ellipsis-h"></span></a>
+                                        <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="line-dropdown_{{$index}}">
+                                            <li role="menuitem" ng-class="{'disabled': profileQuestionnaireLine.Type != Constants.ProfileQuestionaireLineTypes[0].Code}"><a ng-click="detailLine(profileQuestionnaireLine)">Detail</a></li>
+                                            <li role="menuitem"><a ng-click="insertLine(profileQuestionnaireLine)">Insert</a></li>
+                                            <li class="divider"></li>
+                                            <li role="menuitem"><a ng-click="removeLine(profileQuestionnaireLine)">Remove</a></li>
+                                        </ul>        
+                                    </span>
                                 </div>
                             </div>
                         </div>
