--- a/static/app/contactManager/profileQuestionnaireLineDetailMaintenance.html
+++ b/static/app/contactManager/profileQuestionnaireLineDetailMaintenance.html
@@ -32,6 +32,8 @@
                 <label class="control-label col-xs-4" for="CustomerClassField">Customer Class. Field</label>
                 <div class="col-xs-6">
                     <select class="form-control" id="CustomerClassField" name="CustomerClassField" ng-model="ProfileQuestionnaireLine.CustomerClassField"
+                    ng-options="s.Code as s.Name for s in Constants.ProfileQuestionaireLineCustomerClassFieldTypes"
+                    ng-disabled="disableCustomerClassField()"
                     />
                 </div>
             </div>
@@ -39,22 +41,28 @@
                 <label class="control-label col-xs-4" for="VendorClassField">Vendor Class. Field</label>
                 <div class="col-xs-6">
                     <select class="form-control" id="VendorClassField" name="VendorClassField" ng-model="ProfileQuestionnaireLine.VendorClassField"
+                    ng-options="s.Code as s.Name for s in Constants.ProfileQuestionaireLineVendorClassFieldTypes"
+                    ng-disabled="disableVendorClassField()"
                     />
                 </div>
             </div>
             <div class="form-group has-feedback">
                 <label class="control-label col-xs-4" for="ContactClassField">Contact Class Field</label>
                 <div class="col-xs-6">
-                        <select class="form-control col-xs-4" id="ContactClassField" name="ContactClassField" ng-model="ProfileQuestionnaireLine.ContactClassField"/>
+                        <select class="form-control col-xs-4" id="ContactClassField" name="ContactClassField" ng-model="ProfileQuestionnaireLine.ContactClassField"
+                        ng-options="s.Code as s.Name for s in Constants.ProfileQuestionaireLineContactClassFieldTypes"
+                        ng-disabled="disableContactClassField()"
+                        />
                 </div>
                 <div class="col-xs-1" style="padding-left:0px">
-                    <button type="button" class="btn btn-default btn-sm">Points</button>
+                    <button type="button" class="btn btn-default btn-sm" ng-disabled="ProfileQuestionnaireLine.ContactClassField != Constants.ProfileQuestionaireLineContactClassFieldTypes[5].Code">Points</button>
                 </div>
             </div>
             <div class="form-group has-feedback">
                 <label class="control-label col-xs-4" for="StartingDateFormula">Starting Date Formula</label>
                 <div class="col-xs-6">
                     <input type="text" class="form-control" name="StartingDateFormula" id="StartingDateFormula" ng-model="ProfileQuestionnaireLine.StartingDateFormula"
+                    ng-disabled="disableStartingDateFormula()"
                     />
                 </div>
             </div>
@@ -62,6 +70,7 @@
                 <label class="control-label col-xs-4" for="EndingDateFormula">Ending Date Formula</label>
                 <div class="col-xs-6">
                     <input type="text" class="form-control" name="EndingDateFormula" id="EndingDateFormula" ng-model="ProfileQuestionnaireLine.EndingDateFormula"
+                    ng-disabled="disableEndingDateFormula()"
                     />
                 </div>
             </div>
@@ -69,13 +78,18 @@
                 <label class="control-label col-xs-4" for="ClassificationMethod">Classification Method</label>
                 <div class="col-xs-6">
                     <select class="form-control" id="ClassificationMethod" name="ClassificationMethod" ng-model="ProfileQuestionnaireLine.ClassificationMethod"
+                    ng-options="s.Code as s.Name for s in Constants.ProfileQuestionaireLineClassificationMethodTypes"
+                    ng-disabled="disableClassificationMethod()"
                     />
                 </div>
             </div>
             <div class="form-group has-feedback">
                 <label class="control-label col-xs-4" for="SortingMethod">Sorting Method</label>
                 <div class="col-xs-6">
-                    <select class="form-control" id="SortingMethod" name="SortingMethod" ng-model="ProfileQuestionnaireLine.SortingMethod" />
+                    <select class="form-control" id="SortingMethod" name="SortingMethod" ng-model="ProfileQuestionnaireLine.SortingMethod" 
+                    ng-options="s.Code as s.Name for s in Constants.ProfileQuestionaireLineSortingMethodTypes"
+                    ng-disabled="disableSortingMethod()"
+                    />
                 </div>
             </div>
         </form>
