refactoring module & add contactManagement

--- a/static/app/main/navBar.html
+++ b/static/app/main/navBar.html
@@ -15,11 +15,11 @@
                     <li class="dropdown" ng-if="isAuthenticated()">
                         <a data-toggle="dropdown" href="" id="dropdownMenu1">Modules <b class="caret"></b></a>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                            <li role="presentation"><a role="menuitem" tabIndex="-1" ui-sref="contact">Contact Management</a>
+                            <li role="presentation"><a role="menuitem" tabIndex="-1" ui-sref="module.contactManagement">Contact Management</a>
                             </li>
                             <li role="presentation" class="divider"></li>
                             <li role="presentation">
-                                <a role="menuitem" tabIndex="-1" ui-sref="master">Master Setup</a>
+                                <a role="menuitem" tabIndex="-1" ui-sref="module.master">Master Setup</a>
                             </li>
                         </ul>
                     </li>
