--- a/static/app/module/contactManagement.html
+++ b/static/app/module/contactManagement.html
@@ -21,7 +21,16 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <ul class="nav nav-pills nav-stacked">
+                                        <li><a ui-sref="#">Leads</a></li>
+                                        <li><a ui-sref="#">Business Relations</a></li>
                                         <li><a ui-sref="#">Contacts</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-4">
+                                    <ul class="nav nav-pills nav-stacked">
+                                        <li><a ui-sref="#">Oppotunities</a></li>
+                                        <li><a ui-sref="#">Campaigns</a></li>
+                                        <li><a ui-sref="#">Activities</a></li>
                                     </ul>
                                 </div>
                             </div>
